# spatial-competition-jax

./: .gitignore  .mise.toml  README.md  pyproject.toml
configs/: default.yaml  hotelling_1d.yaml  hotelling_1d_discrete.yaml  hotelling_1d_discrete_bin.yaml  hotelling_1d_discrete_conv.yaml  hotelling_1d_discrete_conv_val_high.yaml  hotelling_1d_discrete_conv_val_low.yaml  hotelling_1d_discrete_conv_val_med.yaml  hotelling_1d_discrete_quadratic.yaml  hotelling_1d_discrete_quality.yaml  hotelling_1d_discrete_val_high.yaml  hotelling_1d_discrete_val_high_long.yaml  hotelling_1d_discrete_val_low.yaml  hotelling_1d_discrete_val_med.yaml  hotelling_1d_l2.yaml  hotelling_1d_quadratic.yaml  hotelling_2d_conv.yaml  hotelling_2d_conv_3sellers.yaml  hotelling_2d_conv_3sellers_mixture.yaml  hotelling_2d_conv_gaussian_center.yaml  hotelling_2d_conv_mixture.yaml  hotelling_2d_discrete.yaml  hotelling_2d_discrete_3sellers.yaml  hotelling_2d_discrete_3sellers_mixture.yaml  hotelling_2d_discrete_gaussian_center.yaml  hotelling_2d_discrete_mixture.yaml  hotelling_2d_discrete_val_med.yaml  hotelling_2d_discrete_val_med_3sellers_2gaussians.yaml  hotelling_2d_discrete_val_med_mixture.yaml  psro_hotelling_1_discrete.yaml  psro_hotelling_1d.yaml  psro_hotelling_1d_discrete.yaml  psro_hotelling_1d_discrete_bin.yaml  psro_hotelling_1d_discrete_conv.yaml  psro_hotelling_1d_discrete_conv_val_high.yaml  psro_hotelling_1d_discrete_conv_val_low.yaml  psro_hotelling_1d_discrete_conv_val_med.yaml  psro_hotelling_1d_discrete_val_high.yaml  psro_hotelling_1d_discrete_val_low.yaml  psro_hotelling_1d_discrete_val_med.yaml  (+1 more)
examples/: hotelling_1d.py
scripts/: debug_training.py  demo.py  evaluate.py  parallelized_trainings.sh  run_psro.py  run_psro_asymmetric.py  run_schedule.sh  simulate.py  simulate_psro.py  train_hotelling.py
tests/: test_basic.py
(+26 files in other folders)
